force-app/src/objects/CTCM__Latvian_Audit_File_Mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>CTCM__Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__SFDC_Field_Name__c</fullName>
        <label>SFDC Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Tag_Name__c</fullName>
        <label>Tag Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Latvian Audit File Mapping</label>
    <pluralLabel>Latvian Audit File Mappings</pluralLabel>
</CustomObject>